# agent-knowledge

./: .gitignore  CONTRIBUTING.md  README.md
doc-parser/: .dockerignore  .gitignore  Dockerfile  README.md  build_image.sh  docker-entrypoint.sh  env_example.txt  pyproject.toml  requirements.txt  run_dev.sh  run_dev_and_log.sh  run_dev_background.sh  run_docker_cpu.sh  run_with_rabbitmq.sh  start_multi_instance_service.sh  stop_services.sh  修复总结.md  并发死亡问题分析报告.md
doc-parser/kparser/: apm_manager.py  app.py  multi_instance_app.py
doc-parser/kparser/common/: __init__.py  callback_client.py  config.py  download_oss.py  file_utils.py  log_utils.py  sys_utils.py  tos_download.py  tos_upload.py  types_utils.py  upload_oss.py
doc-parser/kparser/config/: doc_type_loader.py  service_conf.yaml
doc-parser/kparser/core/: job_manager.py  loader_dispatch.py  process_executor.py  progress_tracker.py  schemas.py  utils.py
doc-parser/kparser/model/: model_api.py  vlm_service.py
doc-parser/kparser/multi_instance/: __init__.py  cached_state_manager.py  instance_manager.py  load_balancer.py  progress_batcher.py  progress_sync.py  shared_state_manager.py
doc-parser/kparser/rabbitmq_queue/: __init__.py  connection.py  consumer.py  (+2 more)
doc-parser/static/: swagger-ui-bundle.js
doc-parser/test/: test_config_loading.py  test_env_config.py  test_env_config_full.py  test_env_parser.py  test_excel_vision_env.py  test_excel_vision_parser.py  test_simple_api_check.py  test_tos_upload.py  test_vision_config.py  test_vision_model_config.py  test_vision_params_config.py
doc-parser/tools/: batch_send_tasks.py  cleanup_redis.py  consume_result_queue.py  send_task_message.py
(+304 files in other folders)
