[project]
name = "kparser"
version = "1.0.0"
description = "document parser service"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chardet>=5.2.0",
    "pypdfium2>=4.30.0",
    "python-docx>=1.1.2",
    "python-multipart>=0.0.12",
    "python-pptx>=1.0.2",
    "tabulate>=0.9.0",
    "PyMuPDF>=1.24.1",
    "fastapi>=0.115.0",
    "uvicorn>=0.31.0",
    "pdfplumber==0.11.4",
    "tiktoken==0.8.0",
    "PyPDF2==3.0.1",
    "pycryptodomex==3.21.0",
    "ruamel.yaml==0.18.6",
    "datrie==0.8.2",
    "hanziconv==0.3.2",
    "nltk==3.9.1",
    "roman-numbers==1.0.2",
    "word2number==1.1",
    "cn2an==0.5.23",
    "xgboost==1.7.6",
    "pypdf==5.1.0",
    "onnxruntime==1.19.2; sys_platform == 'darwin' or platform_machine != 'x86_64'",
    "onnxruntime-gpu==1.19.2; sys_platform != 'darwin' and platform_machine == 'x86_64'",
    "readability==0.3.2",
    "html_text==0.6.2",
    "xpinyin==0.7.6",
    "markdown==3.7",
    "minio==7.2.14",
    "boto3==1.36.0",
    "strenum==0.4.15",
    "xlrd==2.0.1",
    "openpyxl==3.1.5",
    "readability-lxml==0.8.1",
    "beautifulsoup4==4.12.3",
    "opencv-python==4.10.0.84",
    "shapely==2.0.6",
    "pyclipper==1.3.0.post5",
    "cachetools==5.5.0",
    "pandas==2.2.3",
    "Aspose.Slides==24.12.0",
    "openai==1.60.0",
    "rapidocr==2.0.4"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 140 # 代码最大行宽
select = [ # 选择的规则
    "F",
    "E",
    "W",
    "UP",
]
ignore = ["F401", "F405", "UP009", "F403", "F541"] # 忽略的规则
